--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 .container-section {
   justify-content: center;
+  padding: 0px;
+  margin: 0px;
+  height: calc(100vh - 191px);
 }
 
 .main-container {
@@ -9,6 +12,7 @@
   min-height: 700px;
   width: 400px;
   padding: 0px;
+  margin: 30px 0px;
 }
 
 .login {
@@ -38,3 +42,11 @@
   align-self: center;
 }
 
+.footer {
+  width: 100%;
+  height: 100px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
