--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
   justify-content: center;
   padding: 0px;
   margin: 0px;
-  height: calc(100vh - 191px);
 }
 
 .main-container {
@@ -13,6 +12,14 @@
   width: 400px;
   padding: 0px;
   margin: 30px 0px;
+}
+
+@media only screen and (max-width: 600px) {
+  .main-container {
+    margin: 0px;
+    border: none;
+    width: 100vw;
+  }  
 }
 
 .login {
