--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,14 @@
   justify-content: center;
   padding: 0px;
   margin: 0px;
+  min-height: calc(100vh - 191px);
 }
 
 .main-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 700px;
+  min-height: 600px;
   width: 400px;
   padding: 0px;
   margin: 30px 0px;
